# project

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  test_import.py
alembic/: env.py
library_catalog/: __init__.py
src/library_catalog/: main.py
src/library_catalog.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/library_catalog/api/: dependencies.py
src/library_catalog/api/v1/: dependencies.py
src/library_catalog/api/v1/routers/: auth.py  books.py  health.py
src/library_catalog/api/v1/schemas/: book.py  common.py
src/library_catalog/core/: auth.py  cache.py  clients.py  config.py  database.py  exceptions.py  logging_config.py
src/library_catalog/data/: unit_of_work.py
src/library_catalog/data/models/: __init__.py  book.py  user.py
src/library_catalog/data/repositories/: __init__.py  base_repository.py  book_repository.py  user_repository.py
src/library_catalog/domain/: constants.py  exceptions.py
src/library_catalog/domain/mappers/: book_mapper.py
src/library_catalog/domain/services/: book_service.py
